# GSG

./: .coverage  .env.example  .gitignore  Dockerfile  PLANNING.md  README.md  TASK.md  TEST_PUSH.md  alembic.ini  coverage.xml  database.db  docker-compose.dev.yml  docker-compose.yml  out.jl  out.json  out_slice.jl  package-lock.json  pipeline_output.jl  pyproject.toml  sb_debug.jl  sb_output.jl  scrapy.cfg  test_items.jsonl  test_output.jl
.github/workflows/: ci.yml  test.yml
api/: Dockerfile.dev  __init__.py  agent.py  deps.py  main.py  models.py
api/routers/: admin.py  crawl.py  logs.py  plan.py  products.py  qa.py
crawler/: __init__.py  items.py  pipelines.py  settings.py
crawler/extractors/: __init__.py  base.py  grandstream.py  guides.py  smallbusiness.py
crawler/spiders/: seed_spider.py
html_reference/: level1.md  level2.md  level3.md  level4.md  level5.md
migrations/: env.py
migrations/versions/: 8f280439b791_create_document_image_and_video_tables.py  b3a1f4e6c8d2_add_category_price_brand.py  init_initial_schema.py
processors/: ingest_worker.py
scripts/: dev.sh  entrypoint_api.sh  init_db.sh  manage.sh
shared/: __init__.py  db.py
tests/: conftest.py  test_smoke.py
tests/api/: test_crawl.py  test_logs.py  test_plan.py  test_products.py  test_qa.py
tests/crawler/: test_extractors.py  test_guides_extractor.py  test_items.py  test_pipelines.py
tests/db/: __init__.py  test_crud.py  test_migrations.py
tests/processors/: test_ingest_worker.py
web/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  providers.tsx
web/src/app/admin/: page.tsx
web/src/app/admin/documents/: page.tsx
web/src/app/admin/products/: page.tsx
web/src/app/crawl/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/database/: page.tsx
web/src/app/documents/: page.tsx
web/src/app/products/: page.tsx
web/src/hooks/: useLogs.ts  usePlan.ts  useProducts.ts  useQA.ts  useStartCrawl.ts  useStopCrawl.ts
web/src/types/: log.ts
