[tool.poetry]
name = "gsg"
version = "0.1.0"
description = "GSG Project"
authors = ["Teodor Angelov <teodorangel@gmail.com>"]
readme = "README.md"
packages = [{include = "gsg"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
scrapy = "^2.12.0"
beautifulsoup4 = "^4.13.4"
langchain = "^0.3.24"
pydantic-ai = "^0.1.4"
psycopg = {extras = ["binary"], version = "^3.2.6"}
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pinecone-client = "^6.0.0"
python-dotenv = "^1.1.0"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
